adding music folder on android

--- a/BookShelf.kv
+++ b/BookShelf.kv
@@ -31,10 +31,10 @@ MainWidget:
         value: root.parent.music_volume
         on_value: root.parent.on_slider_value(self)
         size_hint: 0.4,0.05
-    Button:
-        text: "Load dir"
-        size_hint: 0.2,0.05
-        on_press: root.parent.load_button_pressed()
+    #Button:
+    #    text: "Load dir"
+    #    size_hint: 0.2,0.05
+    #    on_press: root.parent.load_button_pressed()
     Button:
         text: "Load Images"
         size_hint: 0.2,0.05
