--- a/bookshelf.kv
+++ b/bookshelf.kv
@@ -1,11 +1,8 @@
 MainWidget:
 
 <MainWidget>:
-    #ScrollLayoutView:
-    
     GridLayoutExample:
         id: main_grid
-        height: self.minimum_height
 
 <ScrollLayoutView@ScrollView>:
     StackLayoutView:
@@ -13,13 +10,15 @@ MainWidget:
         size_hint: 1, None
         height: self.minimum_height
 
-<Playlist@ScrollView>:
-    StackLayoutView:
+<PlaylistScrollView@ScrollView>:
+    PlaylistStakerView:
         id: playlist_songs
-        size_hint: 1, None
+        #size_hint: 1, None
         height: self.minimum_height
+        width: self.minimum_width
 
 <GridLayoutExample>:
+    height: self.minimum_height
     size_hint:1,1
     pos_hint: {"center_x":0.5, "top":1}
     Label:
@@ -37,31 +36,10 @@ MainWidget:
         on_state: root.parent.on_toggle_button_state(self)
         size_hint: 0.2,0.05
         value: root.parent.create_playlist
-        #on_press: root.parent.playlist_button_pressed()
-    Button:
-        text: "Load Music"
-        size_hint: 0.2,0.05
-        on_press: root.parent.load_music_button_pressed()
     ScrollLayoutView:
         id: scroll_view
-        size_hint: 0.56,0.9
-    Playlist:
+        size_hint: 0.56,0.8
+    PlaylistScrollView:
         id: playlist_view
         size_hint: 0.44,0.9
-    Label:
-        id: current_position_label
-        text: str(root.parent.music_current_position)
-        size_hint: 0.1,0.04
-    Slider:
-        id: music_time
-        min: 0
-        max: 100
-        value: root.parent.music_current_position
-        size_hint: 0.4,0.04
-    Label:
-        id: music_length_label
-        text: str(root.parent.music_length)
-        size_hint: 0.1,0.04
         
-<StackLayoutView>:
-    
